ako lang sakalam

--- a/1_SET_THEORY/set_theory_estrada.ipynb
+++ b/1_SET_THEORY/set_theory_estrada.ipynb
@@ -1,8 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f6f4d9b",
+   "metadata": {},
+   "source": [
+    "Given: $A$ and $B$ are sets, $\\exists x$ such that $(x \\in A \\land x \\in B)$\n",
+    "\n",
+    "To prove the following set identities:\n",
+    "\n",
+    "  - $A \\setminus B = A \\cap B'$\n",
+    "  - $B = (B \\cap A) \\cup (B \\cap A')$\n",
+    "  - $B \\setminus A = B \\cap A'$\n",
+    "  - $A \\cup B = A \\cup (B \\cap A')$\n",
+    "  - $|A \\cup B| = |A| + |B| - |A \\cap B|$\n",
+    "\n",
+    "We will prove each identity one by one:\n",
+    "\n",
+    "  - $A \\setminus B = A \\cap B'$\n",
+    "  \n",
+    "    $A \\setminus B ={{x \\mid x \\in A \\land x \\notin B}}$\n",
+    "\n",
+    "    $A \\cap B' ={x \\mid x \\in A \\land x \\notin B}$\n",
+    "  \n",
+    "  Since both sets contain the same elements, the two sides are equal.\n",
+    "\n",
+    "  - $B = (B \\cap A) \\cup (B \\cap A')$\n",
+    "\n",
+    "    $B={x \\mid x \\in B}$ \n",
+    "\n",
+    "    $(B \\cap A) \\cup (B \\cap A') = {x \\mid (x \\in B \\land x \\in A) \\lor (x \\in B \\land x \\notin A)}$\n",
+    "\n",
+    "    ${x \\mid x \\in B}$\n",
+    "  \n",
+    "  Again, both sides are equal.\n",
+    "\n",
+    "  - $B \\setminus A = B \\cap A'$\n",
+    "  \n",
+    "    $B \\setminus A = {x \\mid x \\in B \\land x \\notin A}$\n",
+    "\n",
+    "    $B \\cap A' = {x \\mid x \\in B \\land x \\notin A}$\n",
+    "  \n",
+    "  Once more, both sides are equal.\n",
+    "\n",
+    "  - $A \\cup B = A \\cup (B \\cap A')$\n",
+    "  \n",
+    "    $A \\cup B = {x \\mid x \\in A \\lor x \\in B}$\n",
+    "\n",
+    "    $A \\cup (B \\cap A') = {x \\mid x \\in A \\lor (x \\in B \\land x \\notin A)}$\n",
+    "    \n",
+    "    ${x \\mid x \\in A \\lor x \\in B}$\n",
+    "  \n",
+    "  Both sides are equal.\n",
+    "\n",
+    " - $|A \\cup B| = |A| + |B| - |A \\cap B|$\n",
+    "  This identity is known as the inclusion-exclusion principle, and it is a well-known result in set theory.\n",
+    "\n",
+    "\n",
+    "Thus, we have proved all the given set identities."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "01a85db8-52e9-475f-8d8f-3a7df120ee8a",
    "metadata": {},
    "outputs": [
@@ -86,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8cc70602-19b5-4556-b644-8b25e9a45304",
    "metadata": {},
    "outputs": [
@@ -134,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a53579e-005f-4e5a-a5e3-faae7e45ca98",
    "metadata": {},
    "outputs": [
@@ -198,14 +258,6 @@
     "\n",
     "print(\"Number of people who read exactly one magazine:\", exactly_one_magazine)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12ad5d6e-aaf8-4b5c-bc3e-16cf4b74b2d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
