ako lang sakalam

--- a/1_SET_THEORY/set_theory_estrada.ipynb
+++ b/1_SET_THEORY/set_theory_estrada.ipynb
@@ -61,6 +61,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b7e5800",
+   "metadata": {},
+   "source": [
+    "Proof 1: $A \\subset B$\n",
+    "\n",
+    "We want to show that $A$ is a subset of $B$. To prove this, we need to show that every element in set $A$ is also in set $B$.\n",
+    "\n",
+    "Given:\\\n",
+    "A = \\{2, 3, 4, 5\\}\\\n",
+    "B = \\{x \\in \\mathbb{N} \\,|\\, x is even}\n",
+    "\n",
+    "Proof:\n",
+    "\n",
+    "Consider the elements of set $A$ one by one:\n",
+    "\n",
+    "- For $x = 2$, we have $x \\in A$ and $x \\in B$ since $2$ is an even natural number.\n",
+    "- For $x = 3$, we have $x \\in A$, but $x \\notin B$ since $3$ is not an even natural number.\n",
+    "- For $x = 4$, we have $x \\in A$ and $x \\in B$ since $4$ is an even natural number.\n",
+    "- For $x = 5$, we have $x \\in A$, but $x \\notin B$ since $5$ is not an even natural number.\n",
+    "\n",
+    "Since for each element $x$ in set $A$, we have determined whether it is in $B$ or not, we can conclude that every element in $A$ is also in $B$. Therefore, $A$ is a subset of $B$, i.e., $A \\subset B$.\n",
+    "\n",
+    "Finding Set $X$\n",
+    "\n",
+    "To satisfy the given conditions for set $X$, we can define:\n",
+    "\n",
+    "- $X$ and $B$ are disjoint: $X \\cap B = \\emptyset$ (no common elements).\n",
+    "- $X \\subseteq D$ but $X \\nsubseteq B$: $X \\subseteq D$ means all elements of $X$ are in $D$, but $X \\nsubseteq B$ means there is at least one element in $X$ that is not in $B$.\n",
+    "- $X \\subseteq A$ but $X \\not\\subset C$: $X \\subseteq A$ means all elements of $X$ are in $A$, but $X \\not\\subset C$ means there is at least one element in $X$ that is not in $C$.\n",
+    "\n",
+    "One possible set that satisfies these conditions is:\n",
+    "\n",
+    "X = \\{3\\}\n",
+    "\n",
+    "This set satisfies all the conditions:\n",
+    "\n",
+    "- $X$ and $B$ are disjoint: $X \\cap B = \\{3\\} \\cap \\{2, 4, 6, 8\\} = \\emptyset$.\n",
+    "- $X \\subseteq D$ but $X \\nsubseteq B$: $X \\subseteq D$ since $3$ is in $D$, but $X \\nsubseteq B$ because $3$ is not in $B$.\n",
+    "- $X \\subseteq A$ but $X \\not\\subset C$: $X \\subseteq A$ since $3$ is in $A$, but $X \\not\\subset C$ because $3$ is not the only element in $X$, and the other element is not in $C$.\n",
+    "\n",
+    "So, the set $X = \\{3\\}$ satisfies all the given conditions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f24813ac",
+   "metadata": {},
+   "source": [
+    "Given:\\\n",
+    "U = \\{1, 2, 3, 4, 5\\}\\\n",
+    "A = \\{1, 2, 3, 4, 5\\}\\\n",
+    "B = \\{4, 5, 6, 7\\}\\\n",
+    "C = \\{5, 6, 7, 8, 9\\}\\\n",
+    "D = \\{1, 3, 5, 7, 9\\}\\\n",
+    "E = \\{2, 4, 6, 8\\}\\\n",
+    "F = \\{1, 5, 9\\}\n",
+    "\n",
+    "1. Symmetric Difference \\(C \\oplus D\\):\n",
+    "\\begin{align*}\n",
+    "C \\oplus D & = (C \\cup D) - (C \\cap D) \\\\\n",
+    "& = \\{5, 6, 7, 8, 9\\} - \\{1, 3, 5, 7, 9\\} \\\\\n",
+    "& = \\{6, 8\\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "2. Set Difference \\(A \\setminus B\\):\n",
+    "\\begin{align*}\n",
+    "A \\setminus B & = \\{1, 2, 3, 4, 5\\} - \\{4, 5, 6, 7\\} \\\\\n",
+    "& = \\{1, 2, 3\\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "3. Set Difference \\(B \\setminus A\\):\n",
+    "\\begin{align*}\n",
+    "B \\setminus A & = \\{4, 5, 6, 7\\} - \\{1, 2, 3, 4, 5\\} \\\\\n",
+    "& = \\{6, 7\\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "4. Symmetric Difference \\(E \\oplus F\\):\n",
+    "\\begin{align*}\n",
+    "E \\oplus F & = (E \\cup F) - (E \\cap F) \\\\\n",
+    "& = \\{2, 4, 6, 8\\} - \\{1, 5, 9\\} \\\\\n",
+    "& = \\{2, 4, 6, 8\\}\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8cc70602-19b5-4556-b644-8b25e9a45304",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C ⊕ D = {1, 3, 6, 8}\n",
+      "A \\ B = {1, 2, 3}\n",
+      "B \\ A = {6, 7}\n",
+      "E ⊕ F = {1, 2, 4, 5, 6, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the sets\n",
+    "U = {1, 2, 3, 4, 5}\n",
+    "A = {1, 2, 3, 4, 5}\n",
+    "B = {4, 5, 6, 7}\n",
+    "C = {5, 6, 7, 8, 9}\n",
+    "D = {1, 3, 5, 7, 9}\n",
+    "E = {2, 4, 6, 8}\n",
+    "F = {1, 5, 9}\n",
+    "\n",
+    "# Calculate the set operations\n",
+    "\n",
+    "# C ⊕ D (Symmetric Difference)\n",
+    "symmetric_diff_CD = C.symmetric_difference(D)\n",
+    "\n",
+    "# A \\ B (Set Difference)\n",
+    "set_diff_AB = A.difference(B)\n",
+    "\n",
+    "# B \\ A (Set Difference)\n",
+    "set_diff_BA = B.difference(A)\n",
+    "\n",
+    "# E ⊕ F (Symmetric Difference)\n",
+    "symmetric_diff_EF = E.symmetric_difference(F)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"C ⊕ D =\", symmetric_diff_CD)\n",
+    "print(\"A \\\\ B =\", set_diff_AB)\n",
+    "print(\"B \\\\ A =\", set_diff_BA)\n",
+    "print(\"E ⊕ F =\", symmetric_diff_EF)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "01a85db8-52e9-475f-8d8f-3a7df120ee8a",
@@ -142,54 +276,6 @@
     "print(\"Number of cars with only one option:\", one_option)\n",
     "print(\"Number of cars with at least one option:\", at_least_one)\n",
     "print(\"Number of cars with none of the options:\", none_option)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8cc70602-19b5-4556-b644-8b25e9a45304",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C ⊕ D = {1, 3, 6, 8}\n",
-      "A \\ B = {1, 2, 3}\n",
-      "B \\ A = {6, 7}\n",
-      "E ⊕ F = {1, 2, 4, 5, 6, 8, 9}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Define the sets\n",
-    "U = {1, 2, 3, 4, 5}\n",
-    "A = {1, 2, 3, 4, 5}\n",
-    "B = {4, 5, 6, 7}\n",
-    "C = {5, 6, 7, 8, 9}\n",
-    "D = {1, 3, 5, 7, 9}\n",
-    "E = {2, 4, 6, 8}\n",
-    "F = {1, 5, 9}\n",
-    "\n",
-    "# Calculate the set operations\n",
-    "\n",
-    "# C ⊕ D (Symmetric Difference)\n",
-    "symmetric_diff_CD = C.symmetric_difference(D)\n",
-    "\n",
-    "# A \\ B (Set Difference)\n",
-    "set_diff_AB = A.difference(B)\n",
-    "\n",
-    "# B \\ A (Set Difference)\n",
-    "set_diff_BA = B.difference(A)\n",
-    "\n",
-    "# E ⊕ F (Symmetric Difference)\n",
-    "symmetric_diff_EF = E.symmetric_difference(F)\n",
-    "\n",
-    "# Print the results\n",
-    "print(\"C ⊕ D =\", symmetric_diff_CD)\n",
-    "print(\"A \\\\ B =\", set_diff_AB)\n",
-    "print(\"B \\\\ A =\", set_diff_BA)\n",
-    "print(\"E ⊕ F =\", symmetric_diff_EF)"
    ]
   },
   {
